# masters

./: .gitmodules  README.md
RED/red-daq-light-multi-decoders-MC-integration/: .gitignore  Makefile.am  build-inst-run-test.sh  configure.ac  red-daq-config.in  red-daq.pc.in  sidutility.cc
RED/red-daq-light-multi-decoders-MC-integration/analysis_scripts/: BeTagging.C  Inspect1.C  Stability.C  TPC.C  calibSi.C  calibSiAlpha.C
RED/red-daq-light-multi-decoders-MC-integration/doc/: Doxyfile.in
RED/red-daq-light-multi-decoders-MC-integration/install/include/red-daq/: ADCEvent.hh  DBService.hh  EvRaw0.hh  MCDecoder.hh  MCTraces.hh  RDFiltering.hh  RDFind_min.hh  RDconfig.h  RunHeader.hh  TADCBoard.hh
RED/red-daq-light-multi-decoders-MC-integration/install/lib/: liblevelone.so.0  liblevelone.so.0.0.0  libmodules.so.0  libpadmeroot.so.0  libpadmeroot.so.0.0.0
RED/red-daq-light-multi-decoders-MC-integration/install/lib/pkgconfig/: red-daq.pc
RED/red-daq-light-multi-decoders-MC-integration/install/share/doc/red-daq/: README.md
RED/red-daq-light-multi-decoders-MC-integration/m4/: mysql.m4
RED/red-daq-light-multi-decoders-MC-integration/src/Level1/: ADCBoard.cc  ADCBoard.hh  ADCEvent.cc  ADCEventTags.hh  Analyzer.cc  Analyzer.hh  Decoder.cc  Decoder.hh  EvHeader.cc  EvRaw0.cc  EvRec0.cc  EvRec0.hh  MCDecoder.cc  MCDecoder.hh  Makefile.am  RDconfig.cc  RedLevel1.cpp  RootIO.cc  RunHeader.cc  VDecoder.cc  VDecoder.hh  levelone_LinkDef.h  liveViewer.cpp  run_390.cfg  test.sh  viewer.cpp  viewer_online.cpp
RED/red-daq-light-multi-decoders-MC-integration/src/Level1/MC/: LArModel.txt
RED/red-daq-light-multi-decoders-MC-integration/src/Level1/cfg/: Dec19_channelmapping.cfg  Dec19_channelmapping_allTPC.cfg  Feb2020B_corr_channelmapping.cfg  Feb2020_channelmapping.cfg  Feb2020_corr_channelmapping.cfg  MCconfig.cfg  MCconfig_ngun.cfg  MCconfig_ngunER.cfg  MCconfig_ngunNR.cfg  channelmapping.cfg  channelmapping_20180710.cfg  channelmapping_292.cfg  channelmapping_300.cfg  channelmapping_314.cfg  channelmapping_355.cfg  channelmapping_379.cfg  channelmapping_383.cfg  channelmapping_390.cfg  channelmapping_391.cfg  channelmapping_3b.cfg  channelmapping_441.cfg  channelmapping_466.cfg  channelmapping_469_b01only.cfg  channelmapping_Na.cfg  channelmapping_Na_AmBe.cfg  channelmapping_Na_Ngun.cfg  channelmapping_Na_bottom.cfg  channelmapping_Na_top.cfg  channelmapping_Nicola.cfg  channelmapping_Sep18.cfg  channelmapping_Sep18_FromRun637.cfg  channelmapping_Sep18_FromRun680.cfg  channelmapping_SiTest.cfg  channelmapping_lsci.cfg  channelmapping_lsci10.cfg  channelmapping_lsci_swapped.cfg  channelmapping_lsci_testbeam.cfg  channelmapping_multi.cfg  channelmapping_multi_mod.cfg  channelmapping_ngun-LiSci1_20190606.cfg  (+33 more)
RED/red-daq-light-multi-decoders-MC-integration/src/Level1/list/: run_list_c8.txt  run_list_c8_problematic.txt  run_list_c8_update.txt
RED/red-daq-light-multi-decoders-MC-integration/src/Level1/reco/: BeTagging.C  CompareSimulation.C  CompareSimulation2.C  CreateF90Histograms-ToFver.C  CreateF90Histograms.C  DriftTime.C  ERRegion.C  F90vsToF.C  GetChargeDistribution.C  GroupAnalysis.C  Images.C  Inspect1.C  InspectRun.C  LowBeStudy.C  LowBeToF.C  PlotF90Parameters-ToFver.C  PlotF90Parameters.C  PlotRMS.C  RunsCheck.C  SiTelTiming.C  TimeOfFlight.C  ToF.C  ToFStudy.C  ToFTesting.C  Utils.C  Utils.cc  bananator.C  hist_file  run_1220_MCNR  sidutility.cc  sidutility.h  vis_1520.C
RED/red-daq-light-multi-decoders-MC-integration/src/Level1/reco/analysis_scripts_maximo/: BeTagging.C  Inspect1-New.C  PumpNoise.C  Root_Plot.cc  Scan_PMT0.C  average_1pe.C  calibSi.C
RED/red-daq-light-multi-decoders-MC-integration/src/Level1/reco/macros_miguel/: CreateF90Histograms.C  ERRegion.C  F90vS1.C  F90vS1.cc  F90vsToF.C  LowBeStudy.C  NRRegion.cc  PlotF90Parameters-ToFver.C  PlotF90Parameters.C  RunsCheck.C  SiTelTiming.C  TimeOfFlight.C  TimeOfFlight_SiTelLSci.C  TimeOfFlight_SiTelTPC.C  roofit_test.cc  sidutility.cc  sidutility.h
RED/red-daq-light-multi-decoders-MC-integration/src/Level1/redmacros-master/: .gitignore  Distances.txt  README.md  fit_parameters0.cfg  fit_parameters_free.cfg  fit_parameters_kb.cfg  plotPAC1.C  plotPAC2.C  run_717.C
RED/red-daq-light-multi-decoders-MC-integration/src/Level1/script/: ReDLYratio.txt  ReDLYratio_Ring.txt  ReDLYratio_nom.txt  angleFitter.C  asyfitter.C  average.C  bananator.C  bigaus_fit.C  dokebirks.C  draw_neutrons_fromTPC.C  filter.C  fourierator.C  guadagno_multi.C  guadagno_multi_2.C  makelist.sh  makelist_double.sh  makelist_double_lns.sh  makelist_multi_lns.sh  makelist_multi_naples.sh  makelist_multi_roma3.sh  monitorator.C  plotVBias.C  pos_reco.C  pos_reco_loop.C  processatutto.sh  processatutto_laser.sh  processatutto_na_laser.sh  processatutto_na_ph1.sh  purity.C  reco.sh  reco_c5.sh  reco_c6.sh  reco_c7.sh  reco_c8.sh  reco_loop_qsub.sh  reco_loop_qsub_c6.sh  reco_loop_qsub_c7.sh  reco_loop_qsub_c8.sh  reco_loop_qsub_test.sh  reco_test.sh  (+15 more)
RED/red-daq-light-multi-decoders-MC-integration/src/Level1/ser/: ser_1002.cfg  ser_1003.cfg  ser_1008.cfg  ser_1017.cfg  ser_1020.cfg  ser_1024.cfg  ser_1032.cfg  ser_1040.cfg  ser_1043.cfg  ser_1047.cfg  ser_1052.cfg  ser_1053.cfg  ser_1055.cfg  ser_1058.cfg  ser_1069.cfg  ser_1070.cfg  ser_1078.cfg  ser_1080.cfg  ser_1084.cfg  ser_1086.cfg  ser_1087.cfg  ser_1094.cfg  ser_1100.cfg  ser_1101.cfg  ser_1105.cfg  ser_1111.cfg  ser_1116.cfg  ser_1122.cfg  ser_1124.cfg  ser_1127.cfg  ser_1132.cfg  ser_1133.cfg  ser_1136.cfg  ser_1140.cfg  ser_1147.cfg  ser_1158.cfg  ser_1162.cfg  ser_1166.cfg  ser_1174.cfg  ser_1176.cfg  (+87 more)
RED/red-daq-light-multi-decoders-MC-integration/src/Modules/: MCTraces.cc  MCTraces.hh  Makefile.am  RDBaseline.cc  RDBaseline.hh  RDClusterization.cc  RDClusterization.cc_old  RDClusterization.hh  RDFiltering.cc  RDFind_min.cc  RDIntegral.cc  RDIntegral.hh  RDPulseFit.hh  RDPulseFitter.cc  RDPulseFitter.hh  modules_LinkDef.h  peakfinder.h
RED/red-daq-light-multi-decoders-MC-integration/src/PadmeRoot/: Makefile.am  TADCBoard.cc  TADCChannel.hh  padmeroot_LinkDef.h
(+54 files in other folders)
